projects/static/armandogil.es/armandogil-landing-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: armandogil-landing
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
