projects/static/armandogil.es/armandogil-landing-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: armandogil-ingress
  namespace: armandogil-landing
  annotations:
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: "axis-dns-issuer"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`armandogil.es`)
      kind: Rule
      services:
        - name: armandogil-landing-svc
          port: 80
  tls:
    secretName: armandogil-landing-tls-cert
